services/gateway/src/main/resources/gateway-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: amirkhan20121999/gateway-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8222
