services/gateway/src/main/resources/gateway-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8222
      nodePort: 30295
