services/gateway/src/main/resources/gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: gateway
      http:
        paths:
          - path: /api/v1/customers
            pathType: Prefix
            backend:
              service:
                name: customer-service
                port:
                  number: 8095
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8091
          - path: /api/v1/order-lines
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8091
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8092
          - path: /api/v1/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8093
